Fix layout overflow when navigator is open [SCI-8589]

--- a/app/assets/stylesheets/navigation/general.scss
+++ b/app/assets/stylesheets/navigation/general.scss
@@ -1,4 +1,8 @@
 body {
+  min-width: 1140px;
+}
+
+body.navigator-collapsed {
   min-width: 900px;
 }
 
